@@ -2,6 +2,7 @@ package study.part1.chapter10.with_stream_optional;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class StreamOptionalMain {
 
@@ -9,7 +10,7 @@ public class StreamOptionalMain {
         int[] integerArray = {1, 2, 3, 4, 5, 6, 7, 8, 9, 10};
         List<Integer> integerList = Arrays.stream(integerArray)
                 .boxed()
-                .toList();
+                .collect(Collectors.toList());
 
         Integer findNumber = integerList.stream()
                 .filter(i -> i.equals(1234))
